[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://actors/TorchLight.gd" id="1_torch"]
[ext_resource type="Script" path="res://systems/DimensionNode.gd" id="2_dimension"]

[sub_resource type="CircleShape2D" id="CircleShape2D_Torch"]
radius = 16.0

[node name="TorchLight" type="Area2D"]
script = ExtResource("1_torch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_Torch")

[node name="FlameParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -8)
amount = 64
one_shot = false
emitting = true
local_coords = true
lifetime = 0.8
preprocess = 0.4

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -6)
color = Color(1, 0.85, 0.5, 1)
energy = 1.2
texture_scale = 2.0
shadow_enabled = false

[node name="InnerLight" type="PointLight2D" parent="."]
position = Vector2(0, -7)
color = Color(1, 0.95, 0.7, 1)
energy = 0.9
texture_scale = 1.2
shadow_enabled = false

[node name="EmberBurst" type="GPUParticles2D" parent="."]
position = Vector2(0, -10)
amount = 28
one_shot = true
emitting = false
local_coords = true
lifetime = 0.9
preprocess = 0.0

[node name="DimensionNode" type="Node" parent="."]
script = ExtResource("2_dimension")
active_layers = Array[int]([0])
affect_collision = true
affect_visibility = true
fade_transition = false
